--- a/src/style/pokeCard.css
+++ b/src/style/pokeCard.css
@@ -10,16 +10,22 @@
   }
 
 .pokeCard {
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 30%;
     height: 22%;
     border-radius: 10px;
-    background-color: #b6b080;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin: 1%;
+    overflow: hidden;
+    text-align: center;
+    position: relative;
+}
+
+#toUpperCase {
+    text-transform: capitalize;
 }
 
 .pokeImg {
@@ -55,3 +61,78 @@
     display: flex;
     justify-content: center;
 }
+
+.pokeCard:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    z-index: 1;
+  }
+  
+  .grass {
+    background-color: #9bcc50;
+  }
+  
+  .fire {
+    background-color: #fd7d24;
+  }
+  
+  .water {
+    background-color: #4592c4;
+  }
+  
+  .bug {
+    background-color: #729f3f;
+  }
+  
+  .normal {
+    background-color: #a4acaf;
+  }
+  
+  .poison {
+    background-color: #b97fc9;
+  }
+  
+  .electric {
+    background-color: #eed535;
+  }
+  
+  .ground {
+    background-color: #ab9842;
+  }
+  
+  .fairy {
+    background-color: #fdb9e9;
+  }
+  
+  .fighting {
+    background-color: #d56723;
+  }
+  
+  .psychic {
+    background-color: #f366b9;
+  }
+  
+  .rock {
+    background-color: #a38c21;
+  }
+  
+  .ghost {
+    background-color: #7b62a3;
+  }
+  
+  .ice {
+    background-color: #51c4e7;
+  }
+  
+  .dragon {
+    background-color: #53a4cf;
+  }
+  
+  .steel {
+    background-color: #9eb7b8;
+  }
+  
+  .dark {
+    background-color: #707070;
+  }
+  
