--- a/src/style/pokeTable.css
+++ b/src/style/pokeTable.css
@@ -1,5 +1,5 @@
 .background {
-    background-color: #b6b080;
+    background-color: #ebf4f7;
     height: 100%;
     width: 100%;
     border: 1px solid black;
