--- a/src/style/detail.css
+++ b/src/style/detail.css
@@ -6,7 +6,7 @@
   }
   
   .card {
-    width: 500px;
+    width: 40%;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -16,33 +16,33 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding: 1%;
   }
   
   .pokeName {
-    font-size: 36px;
+    font-size: 200%;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 1%;
     text-transform: capitalize;
   }
   
   .pokeImage {
-    width: 200px;
-    height: 200px;
+    width: 30%;
+    height: 30%;
     margin-bottom: 20px;
   }
   
   .pokeTypes {
-    font-size: 24px;
+    font-size: 170%;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 1%;
     text-transform: capitalize;
   }
   
   .pokeStats {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 1%;
   }
   
   .pokeStats p {
@@ -60,3 +60,21 @@
     margin-bottom: 5px;
     text-transform: capitalize;
   }
+
+  .backButton {
+      width: 8%;
+      height: 100%;
+      border-radius: 10px;
+      background-color: #3a4244;
+      color: white;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      text-decoration: none;
+      text-align: center;
+  }
+  
+  .backButton:hover {
+    background-color: #388e3c;
+  }
+  
